fix: card body overflow

--- a/app/static/home.css
+++ b/app/static/home.css
@@ -12,32 +12,32 @@
   background-color: #95c22b !important;
 }
 
-.card-subscription{
+.card-subscription {
   border-radius: 25px !important;
 }
 
-.btn-subscribe-green{
-  background-color: #95C22B;
+.btn-subscribe-green {
+  background-color: #95c22b;
   border-radius: 20px;
-  text-decoration:none;
+  text-decoration: none;
   border: none;
   color: white;
   padding: 12px 24px;
 }
 
-.btn-primary-green{
-  background-color: #95C22B;
+.btn-primary-green {
+  background-color: #95c22b;
   border-radius: 5px;
-  text-decoration:none;
+  text-decoration: none;
   border: none;
   color: white;
   padding: 12px 24px;
 }
 
-.btn-favorite{
-  background-color: #7B4425;
+.btn-favorite {
+  background-color: #7b4425;
   border-radius: 5px;
-  text-decoration:none;
+  text-decoration: none;
   border: none;
   color: white;
   padding: 12px 24px;
@@ -47,24 +47,23 @@
   color: #95c22b !important;
 }
 
-
-.store-heading-bg{
+.store-heading-bg {
   background-image: url("/static/assets/2.png");
   height: 350px;
-  border-radius:10px;
+  border-radius: 10px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.store-carousel-bg{
-  border-radius:10px;
+.store-carousel-bg {
+  border-radius: 10px;
   max-width: 100%;
   height: auto;
 }
 
-.store-btn-light{
-  background-color:white;
+.store-btn-light {
+  background-color: white;
   border: none;
   padding: 20px 30px;
   width: 250px;
@@ -74,8 +73,8 @@
   font-size: 16px;
 }
 
-.overflow-ellipsis{
-  width:100%;
+.overflow-ellipsis {
+  width: 100%;
   display: inline-block;
   white-space: nowrap;
   overflow: hidden;
@@ -83,12 +82,12 @@
   word-break: break-all;
 }
 
-.store-nav-search{
+.store-nav-search {
   text-align: center;
   vertical-align: middle;
-  }
+}
 
-.store-head-label{
+.store-head-label {
   text-align: center;
   vertical-align: middle;
   padding-top: 125px;
@@ -96,24 +95,28 @@
   margin-right: 75px;
 }
 
-.card-ggc{
-  height:16rem !important;
+.card-ggc {
+  height: 16rem !important;
   object-fit: cover;
 }
 
-.logo-image{
-  height:35px;
-  margin-top:5px;
+.logo-image {
+  height: 35px;
+  margin-top: 5px;
 }
 
 .elementToFadeInAndOut {
-    opacity: 1;
-    animation: fade 0.25s linear;
+  opacity: 1;
+  animation: fade 0.25s linear;
 }
 
 @keyframes fade {
-   0% {opacity: 0;}
-   100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -123,8 +126,8 @@
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .overflow-auto {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -135,7 +138,7 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
@@ -143,171 +146,188 @@ input[type=number] {
   object-fit: cover;
 }
 
-.cat-box{
+.cat-box {
   background-color: #95c22b;
   border-style: solid;
   border-width: 1px;
   border-color: #e7e9eb;
 }
 
-#checkboxes input[type=checkbox]{
-    display: none;
+#checkboxes input[type="checkbox"] {
+  display: none;
 }
 
-#checkboxes input[type=checkbox]:checked + .cat-box{
-    border-color: #95c22b;
+#checkboxes input[type="checkbox"]:checked + .cat-box {
+  border-color: #95c22b;
+}
+
+.card-description {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 /* responsive css */
 
 @media (max-width: 1920px) {
-  .card-body-height{
+  .card-body-height {
     height: 10rem;
   }
 }
 
 @media (max-width: 1366px) {
-  .text-link{
+  .text-link {
     font-size: 0.8em;
   }
-  .store-heading-bg{
-  height: 250px;
+  .store-heading-bg {
+    height: 250px;
   }
-  .store-head-label{
-  text-align: center;
-  padding-top: 75px;
-  margin-left: 25px;
-  margin-right: 25px;
+  .store-head-label {
+    text-align: center;
+    padding-top: 75px;
+    margin-left: 25px;
+    margin-right: 25px;
   }
-  .logo-image{
-  height:30px;
+  .logo-image {
+    height: 30px;
   }
   .prod-desc {
-  font-size: 0.8em;
+    font-size: 0.8em;
   }
   h4 {
-  font-size: 1.2rem !important;  
+    font-size: 1.2rem !important;
   }
 }
 
 @media (max-width: 1024px) {
-  .text-link{
+  .text-link {
     font-size: 0.8em;
   }
-  .store-heading-bg{
-  height: 250px;
+  .store-heading-bg {
+    height: 250px;
   }
-  .store-head-label{
-  text-align: center;
-  padding-top: 75px;
-  margin-left: 25px;
-  margin-right: 25px;
+  .store-head-label {
+    text-align: center;
+    padding-top: 75px;
+    margin-left: 25px;
+    margin-right: 25px;
   }
-  .logo-image{
-  height:30px;
+  .logo-image {
+    height: 30px;
   }
   .prod-desc {
-  font-size: 0.8em;
+    font-size: 0.8em;
   }
-  .card-ggc{
-  height:10rem !important; 
-  object-fit: cover;
+  .card-ggc {
+    height: 10rem !important;
+    object-fit: cover;
   }
-  .card-body-height{
-  height: 8.75rem;
-  h4 {
-  font-size: 0.9rem !important;  
+  .card-body-height {
+    height: 8.75rem;
+    font-size: 0.9rem !important;
   }
 }
- 
-@media (max-width: 576px) {
 
+@media (max-width: 576px) {
   #subsheader {
-    display: none  !important;
+    display: none !important;
   }
-  
+
   #subsheader-mobile {
     display: block !important;
     object-fit: cover;
     height: auto;
   }
-  
-  .text-link{
+
+  .text-link {
     font-size: 0.8em;
   }
-  .carousel-pad{
-    padding:0px !important;
+  .carousel-pad {
+    padding: 0px !important;
   }
-  .store-carousel-bg{
-  height: 200px;
-  border-radius:0px !important;
+  .store-carousel-bg {
+    height: 200px;
+    border-radius: 0px !important;
   }
-  .search-bar{
-    margin-left:5px;
-    margin-right:5px;
+  .search-bar {
+    margin-left: 5px;
+    margin-right: 5px;
   }
-  .store-heading-bg{
+  .store-heading-bg {
     height: 250px;
   }
-  .store-head-label{
+  .store-head-label {
     text-align: center;
     padding-top: 50px;
     margin-left: 25px;
     margin-right: 25px;
   }
-  .logo-image{
-    height:25px;
+  .logo-image {
+    height: 25px;
   }
-  .prod-desc{
+  .prod-desc {
     font-size: 0.8em;
   }
-  .prod-category{
+  .prod-category {
     font-size: 0.6em;
   }
-  
-  .card-ggc{
-  height:12rem !important; 
-  object-fit: cover;
+
+  .card-ggc {
+    height: 8rem !important;
+    object-fit: cover;
   }
-  .card-body-height{
-    height: 9.5rem;
+  .card-body-height {
+    height: 7.5rem;
   }
+
+  .card-body-height h5 {
+    margin-bottom: 0 !important;
+  }
+
   h4 {
-  font-size: 1.2rem !important;  
+    font-size: 1.2rem !important;
+  }
+
+  .card-description {
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
   }
 }
 
 @media (max-width: 360px) {
-  .text-link{
+  .text-link {
     font-size: 0.9em;
   }
-  .carousel-pad{
-    padding:0px !important;
+  .carousel-pad {
+    padding: 0px !important;
   }
-  .store-carousel-bg{
-  height: 250px;
-  border-radius:0px !important;
+  .store-carousel-bg {
+    height: 250px;
+    border-radius: 0px !important;
   }
-  .search-bar{
-    margin-left:5px;
-    margin-right:5px;
+  .search-bar {
+    margin-left: 5px;
+    margin-right: 5px;
   }
-  .store-heading-bg{
+  .store-heading-bg {
     height: 250px;
   }
-  .store-head-label{
+  .store-head-label {
     text-align: center;
     padding-top: 50px;
     margin-left: 25px;
     margin-right: 25px;
   }
-  .logo-image{
-    height:25px;
+  .logo-image {
+    height: 25px;
   }
-  .prod-desc{
+  .prod-desc {
     font-size: 0.8em;
   }
   h4 {
-  font-size: 1.2rem !important;  
+    font-size: 1.2rem !important;
   }
 }
